# job

./: pyproject.toml  registry.json
examples/: README.md
examples/job-prep/behavioral-interview/references/: source.md
examples/job-prep/behavioral-interview/references/refs/: eval-job-prep-assistant.yaml
examples/job-prep/job-prep-assistant/references/: source.md
examples/job-prep/job-prep-assistant/references/refs/: resume-standards.md
examples/job-prep/resume-tailor/references/: ir.md  source.md
examples/job-prep/tech-interview-lite/references/: eval.yaml
examples/job-prep/tech-interview-lite/references/refs/: eval-behavioral-interview.yaml  routing-rules.md
skill-forge/built/job-prep/behavioral-interview/: SKILL.md
skill-forge/built/job-prep/behavioral-interview/references/: ir.md
skill-forge/built/job-prep/behavioral-interview/references/refs/: eval-behavioral-interview.yaml.md  eval-resume-tailor.yaml  eval-tech-interview-lite.yaml.md  session-schema.yaml
skill-forge/built/job-prep/job-prep-assistant/: SKILL.md
skill-forge/built/job-prep/job-prep-assistant/references/: ir.md
skill-forge/built/job-prep/job-prep-assistant/references/refs/: application-checklist-template.md  session-schema.yaml.md  tech-interview-guide.md
skill-forge/built/job-prep/resume-tailor/: SKILL.md
skill-forge/built/job-prep/tech-interview-lite/: SKILL.md
skill-forge/built/job-prep/tech-interview-lite/references/: ir.md  source.md
skill-forge/themes/job-prep/: THEME.md
skill-forge/themes/job-prep/refs/: jd-parsing-guide.md  job-catalog.yaml
(+4 files in other folders)
